分析JVM heap 内存模型